--- a/content/wikimarks/overview.mkd
+++ b/content/wikimarks/overview.mkd
@@ -15,26 +15,9 @@ hyperlink structure, and complementary data sources such as [Wikidata][].
 
 
 ### Authors
-- Laura Dietz <dietz@cs.unh.edu>
-- Shubham Chatterjee <sc1242@wildcats.unh.edu>
-- Connor Lennox <cjl1053@wildcats.unh.edu>,
-- Sumanta Kashyapi <sk1105@wildcats.unh.edu>, 
-- Pooja Oza <pho1003@wildcats.unh.edu>, 
-- Ben Gamari <ben@well-typed.com>
+Laura Dietz <dietz@cs.unh.edu>, Shubham Chatterjee <sc1242@wildcats.unh.edu>,  Connor Lennox <cjl1053@wildcats.unh.edu>,  Sumanta Kashyapi <sk1105@wildcats.unh.edu>, Pooja Oza <pho1003@wildcats.unh.edu>,  Ben Gamari <ben@well-typed.com>
 
 University of New Hampshire, USA and Well-Typed LLP, UK
-
-## Table of Contents
-
-In this online supplement, we provide:
-
- * An approach for deriving Wikimark collections, i.e., Wikipedia-derived benchmarks, 
- * for a set of  four common information retrieval tasks
- * A [set of tools](code.html) for deriving Wikimarks from Wikipedia dumps
- * A [set of machine-readable conversions](dumps.html) of the English, Simple
-   English, and Japanese Wikipedias
- * A [set of Wikimarks](wikimarks.html) derived from these three Wikipedias
- * An [evaluation](evaluation.html) of serveral baseline methods using these benchmarks
 
 
 ## What are you looking for?
@@ -67,6 +50,20 @@ In this online supplement, we provide:
 <li> [for evaluation results of reference baselines](evaluation.html)
 </ul>
    
+   
+## Table of Contents
+
+In this online supplement, we provide:
+
+ * An approach for deriving Wikimark collections, i.e., Wikipedia-derived benchmarks, 
+ * for a set of  four common information retrieval tasks
+ * A [set of tools](code.html) for deriving Wikimarks from Wikipedia dumps
+ * A [set of machine-readable conversions](dumps.html) of the English, Simple
+   English, and Japanese Wikipedias
+ * A [set of Wikimarks](wikimarks.html) derived from these three Wikipedias
+ * An [evaluation](evaluation.html) of serveral baseline methods using these benchmarks
+
+
 ### Data Model
 
 The code and all provided downloads make use of the same data model for Wikipedia articles, paragraphs, and outlines. 
